- Форматирование кода - Небольшая оптимизация - Удалена часть устаревшего кода - Исправление ошибок